--- a/src/package.json
+++ b/src/package.json
@@ -1,12 +1,12 @@
 {
   "name": "kaholo-plugin-ansible",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "Kaholo Plugin for Ansible",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ilan Yaniv",
+  "author": "Amit Alon",
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2"
