--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-plugin-ansible",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Kaholo Plugin for Ansible",
   "main": "app.js",
   "scripts": {
@@ -8,7 +8,5 @@
   },
   "author": "Amit Alon",
   "license": "ISC",
-  "dependencies": {
-    "child_process": "^1.0.2"
-  }
+  "dependencies": {}
 }
