--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,8 @@
     "execProgram": "node",
     "imgUrl": "icon.png",
     "main": "app.js",
-    "version": "1.1.6",
+    "version": "1.1.7",
+    "category": ["CONFIGURATION MGMT", "CI/CD"],
     "methods": [
     {
         "name" : "runPlaybook",
