--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,7 @@
     "execProgram": "node",
     "imgUrl": "icon.png",
     "main": "app.js",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "category": ["CONFIGURATION MGMT", "CI/CD"],
     "methods": [
     {
@@ -21,12 +21,22 @@
             {
                 "name": "sshUsername",
                 "viewName": "SSH Username",
+                "description": "Username under which the SSH connection will be obtained.",
+                "placeholder": "ubuntu",
                 "type": "string"
             },
             {
                 "name": "sshPass",
                 "viewName": "SSH Password",
+                "description": "Password for the provided username",
                 "type": "vault"
+            },
+            {
+                "name": "sshKeyPath",
+                "viewName": "SSH Key Path",
+                "description": "Path to the SSH Private Key.",
+                "placeholder": "~/.ssh/id_rsa.pem",
+                "type": "string"
             },
             {
                 "name": "inventories",
