--- a/src/config.json
+++ b/src/config.json
@@ -6,7 +6,7 @@
     "execProgram": "node",
     "imgUrl": "icon.png",
     "main": "app.js",
-    "version": "1.1.8",
+    "version": "1.1.9",
     "category": ["CONFIGURATION MGMT", "CI/CD"],
     "methods": [
     {
@@ -16,6 +16,8 @@
             {
                 "name": "playbookPath",
                 "viewName": "Playbook Path",
+                "description": "Path to playbook file.",
+                "placeholder": "/home/ubuntu/playbooks/root_playbook.yml",
                 "type": "string"
             },
             {
@@ -39,23 +41,39 @@
                 "type": "string"
             },
             {
-                "name": "inventories",
-                "viewName": "Inventories",
+                "name": "inventoryFiles",
+                "viewName": "Inventory Files",
+                "description": "Add file paths to the inventory files. Use new lines for multiple.",
+                "placeholder": "/etc/ansible/hosts\n/etc/ansible/hosts_v2",
+                "type": "text"
+            },
+            {
+                "name": "inventoryIPs",
+                "viewName": "Inventory IPs/Hosts",
+                "placeholder": "10.0.0.1\nexample.com",
+                "description": "Each new line can be an IP or Hostname. NOTE: Requires 'hosts: all' in your playbook.",
                 "type": "text"
             },
             {
                 "name": "limit",
                 "viewName": "Limit",
+                "description": "Each new line is further limitation of selected hosts to an additional pattern.",
+                "learnUrl": "https://docs.ansible.com/ansible/latest/user_guide/intro_patterns.html#patterns-and-ansible-playbook-flags",
                 "type": "text"
             },
             {
                 "name": "modules",
                 "viewName": "Modules",
+                "learnUrl": "https://docs.ansible.com/ansible/latest/user_guide/basic_concepts.html#modules",
+                "description": "Path(s) to module library",
                 "type": "text"
             },
             {
                 "name": "vars",
                 "viewName": "Variables",
+                "description": "Set additional variables as key=value, for more than one separate them with new line. NOTE: The variables set here will override all other variables in your playbooks/inventories etc.",
+                "learnUrl": "https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html",
+                "placeholder": "foo=bar\nbar=foo",
                 "type": "text"
             }
         ]
