--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "kaholo-plugin-ansible",
-  "version": "1.1.5",
   "description": "Kaholo Plugin for Ansible",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix"
   },
   "author": "Amit Alon",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {
+    "kaholo-plugin-library": "github:Kaholo/kaholo-plugin-library#v1.0.3"
+  }
 }
