--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "kaholo-plugin-library": "github:Kaholo/kaholo-plugin-library#v1.0.3"
+  },
+  "devDependencies": {
+    "eslint": "8.15.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.26.0"
   }
 }
