--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Amit Alon",
   "license": "ISC",
   "dependencies": {
-    "kaholo-plugin-library": "github:Kaholo/kaholo-plugin-library#v1.0.3"
+    "kaholo-plugin-library": "github:Kaholo/kaholo-plugin-library#v1.0.3",
+    "lodash": "4.17.21"
   },
   "devDependencies": {
     "eslint": "8.15.0",
