--- a/config.json
+++ b/config.json
@@ -8,7 +8,20 @@
   "imgUrl": "icon.png",
   "main": "app.js",
   "version": "2.1.0",
-  "category": ["CONFIGURATION MGMT", "CI/CD"],
+  "category": ["CONFIGURATION MGMT"],
+  "keywords": [
+    "ansible",
+    "configuration",
+    "code",
+    "provision",
+    "deployment",
+    "agentless",
+    "infrastructure",
+    "iac",
+    "declarative",
+    "tower",
+    "red hat"
+  ],
   "methods": [
     {
       "name": "checkAnsibleVersion",
