[KP-793] Update keywords, description, logo.png

--- a/config.json
+++ b/config.json
@@ -2,13 +2,13 @@
   "name": "Ansible",
   "viewName": "Ansible",
   "type": "executer",
-  "description": "Kaholo Plugin for Ansible",
+  "description": "Ansible software provisioning and configuration management",
   "exposeRoute": false,
   "execProgram": "node",
-  "imgUrl": "icon.png",
+  "imgUrl": "logo.png",
   "main": "app.js",
-  "version": "2.1.0",
-  "category": ["CONFIGURATION MGMT"],
+  "version": "2.1.1",
+  "category": ["Configuration Management"],
   "keywords": [
     "ansible",
     "configuration",
