--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   "execProgram": "node",
   "imgUrl": "logo.png",
   "main": "app.js",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "category": ["Configuration Management"],
   "keywords": [
     "ansible",
@@ -80,7 +80,7 @@
           "description": "Additional command arguments appended at the end of the generated command, one argument per line.",
           "type": "text",
           "parserType": "array",
-          "placeholder": "-vv\n--syntax-check"
+          "placeholder": "-vvv"
         }
       ]
     }
